--- a/home/index.html
+++ b/home/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Professional Portfolio</title>
-    <link rel="stylesheet" href="home/portfolio.css">
-    
+    <link rel="stylesheet" href="portfolio.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -38,8 +38,8 @@
             <h2>Education & Achievements</h2>
             <div class="info-grid">
                 <div class="item">
-                    <h3>[School Name]</h3>
-                    <p>Current Year/Level</p>
+                    <h3>[Asia Pacific College]</h3>
+                    <p>2nd Year</p>
                 </div>
                 <div class="item">
                     <h3>Achievements</h3>
