--- a/home/index.html
+++ b/home/index.html
@@ -31,7 +31,7 @@
         
         <section id="about" class="section-card">
             <h2>About Me</h2>
-            <p>Hello! I am currently a student enrolled in <strong>[Your Course Name here]</strong>. I am passionate about technology and how it shapes our future.</p>
+            <p>Hello! I am currently a student enrolled in <strong>[BSIT]</strong>. I am passionate about technology and how it shapes our future.</p>
         </section>
 
         <section id="education" class="section-card">
