--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <header class="hero">
-        <h1>Welcome to My World</h1>
+        <h1>Welcome to My Personal Profile </h1>
         <p>IT Student | Creative Thinker | Problem Solver</p>
     </header>
 
@@ -30,19 +30,19 @@
         
         <section id="about" class="section-card">
             <h2>About Me</h2>
-            <p>Hello! I am currently a student enrolled in <strong>[Your Course Name here]</strong>. I am passionate about technology and how it shapes our future.</p>
+            <p>Hello! I am currently a student enrolled in <strong>[BS INFORMATION TECHNOLOGY]</strong>. I am passionate about technology and how it shapes our future.</p>
         </section>
 
         <section id="education" class="section-card">
             <h2>Education & Achievements</h2>
             <div class="info-grid">
                 <div class="item">
-                    <h3>[School Name]</h3>
-                    <p>Current Year/Level</p>
+                    <h3>ASIA PACIFIC COLLEGE</h3>
+                    <p>2ND YEAR</p>
                 </div>
                 <div class="item">
                     <h3>Achievements</h3>
-                    <p>[List honors, certificates, or awards here]</p>
+                    <p>Defended a Capstone</p>
                 </div>
             </div>
         </section>
@@ -52,8 +52,8 @@
             <p>I have experience working with:</p>
             <ul class="skills-list">
                 <li>Web Development (HTML, CSS, JS)</li>
-                <li>[Tool/Language 2]</li>
-                <li>[Tool/Language 3]</li>
+                <li>Java</li>
+                <li>Python</li>
             </ul>
         </section>
 
@@ -69,7 +69,7 @@
 
         <section id="goals" class="section-card goal-highlight">
             <h2>Goals & Dreams</h2>
-            <p>"To become a <strong>[Your Dream Career]</strong> and use technology to create sustainable solutions for the community."</p>
+            <p>"To become a <strong>Software Developer</strong> and use technology to create sustainable solutions for the community."</p>
         </section>
 
         <section id="gallery" class="section-card">
@@ -90,7 +90,7 @@
             <li>Design: Inspired by Minimalist UI/UX Principles</li>
             <li>AI Assistance: Gemini (Google)</li>
         </ul>
-        <p>&copy; 2024 [Your Name]. All Rights Reserved.</p>
+        <p>&copy; 2024 AHRON CALUCIN. All Rights Reserved.</p>
     </footer>
 
 </body>
